# treinaweb-langchain-fundamentos

./: README.md  main.py  products.csv  pyproject.toml
