[project]
name = "langchain-fundamentos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain[openai]>=1.2.17",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]
